--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0-dev1",
   "description": "",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest test",
     "start": "webpack serve --mode development",
     "build": "webpack --mode production"
   },
@@ -11,10 +11,14 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
     "@typescript-eslint/parser": "^5.58.0",
+    "babel-jest": "^29.5.0",
     "eslint": "^8.38.0",
     "html-webpack-plugin": "^5.5.1",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.79.0",
